--- a/app/public/css/media_view.css
+++ b/app/public/css/media_view.css
@@ -1,3 +1,36 @@
 img, video {
     width: 50%;
 }
+
+#comment_container textarea {
+    width: 400px;
+    height: 100px;
+    border-radius: 25px;
+    padding: 10px;
+}
+
+#comments {
+    margin-top: 25px;
+    background-color: #FFD278;
+    width: 40%;
+    border-radius: 50px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+#comments hr {
+    height: 2px;
+    background-color: #CFA248;
+    border: none;
+    width: 50%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.header {
+    margin-bottom: 10px;
+}
+
+.comment {
+    margin-bottom: 25px;
+}
